# billr-stella

./: package.json  pnpm-lock.yaml
bill-app/frontend/: package.json  pnpm-lock.yaml  vite.config.ts
bill-app/frontend/.stellar/contract-ids/: billr_contract.json
bill-app/frontend/src/: App.css  App.tsx  types.ts
bill-app/frontend/src/components/: ConnectWalletButton.tsx  Header.tsx
bill-app/frontend/src/hooks/: contractUtils.ts  useContract.ts
bill-app/frontend/src/pages/: create.tsx  invoices.tsx  welcome.tsx
contracts/bilrr/contracts/bilrr/: Cargo.toml
contracts/bilrr/contracts/bilrr/src/: lib.rs
contracts/bilrr/src/lib/contracts/billr/: README.md  package.json
contracts/bilrr/src/lib/contracts/billr/src/: index.ts
